<resources>
    <string name="app_name">Cine Pop</string>
    <string name="title_activity_main">Cine Pop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_login">Iniciar sesión</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_tickets">Mis tickets</string>
    <string name="menu_mapa">Mapa</string>
    <string name="menu_comentar">Enviar Comentarios</string>
    <string name="menu_logout">Cerrar sesión</string>

    <string name="title_activity_login">Iniciar sesión</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_password_confirm">Confirmar contraseña</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Registrate</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="title_activity_register">Registrarse</string>
    <string name="prompt_firstname">Nombre</string>
    <string name="prompt_lastname">Apellido</string>
    <string name="button_register">Enviar</string>

    <string name="invalid_user_pass_login">El usuario y/o la contraseña no válidos</string>

    <string name="successful_register">Registro exitoso</string>
    <string name="failed_register">Error al registrarse</string>
    <string name="existing_user_register">El mail ya se encuentra registrado</string>
    <string name="does_not_pass_match_register">Las contraseñas ingresadas no coinciden</string>
    <string name="incomplete_form_register">Faltan completar algunos datos</string>


    <string name="shared_pref_session">session_login</string>

    <string name="button_reservar_function">Reservar</string>

    <string name="cant_asientos_disponibles">Asientos disponibles:</string>
    <string name="button_confirmar_reserva">Confirmar</string>
    <string name="title_activity_contacto">Enviar Comentarios</string>
    <string name="button_send">Enviar</string>
    <string name="write_coment">Escriba su comentario aquí</string>
    <string name="select_app_mail">Seleccione la app para enviar el mail</string>
    <string name="asunto">Comentario para Cine Pop</string>
    <string name="title_activity_mapita">Mapa</string>
    <string name="title_activity_reserva">Reservar</string>
    <string name="title_activity_movie">Pelicula</string>
    <string name="title_activity_tickets">Mis Tickets</string>

    <string name="cant_asientos">Asientos: </string>
    <string name="not_logged">Debe haber iniciado sesión para realizar una reserva</string>
</resources>
