<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tickets"
            android:icon="@drawable/ic_menu_tickets"
            android:title="@string/menu_tickets" />
        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/ic_menu_mapa"
            android:title="@string/menu_mapa" />
        <item
            android:id="@+id/nav_contacto"
            android:icon="@drawable/ic_menu_contacto"
            android:title="@string/menu_comentar" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout"
            android:visible="false" />
    </group>

</menu>
